Fix code background in dark mode

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -895,14 +895,21 @@ table tr td :last-child {
 }
 
 /* --- Code blocks --- */
-
 code {
   padding: 0.125rem 0.25rem;
   color: #c7254e;
-  background-color: #f9f2f4;
   border-radius: 0.25rem;
 }
-
+@media not (prefers-color-scheme: dark) {
+  code {
+    background-color: #f9f2f4;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  code {
+    background-color: ##202030;
+  }
+}
 pre code {
   padding: 0;
   background-color: transparent;
